--- a/src/app/addproduct/addproduct.component.html
+++ b/src/app/addproduct/addproduct.component.html
@@ -5,10 +5,7 @@
       <div class="flex">
       <input type="text" id="product-name" placeholder="Nazwa produktu" required>
       <select id="category">
-        <option value="Warzywa">Warzywa</option>
-        <option value="Mięso">Mięso</option>
-        <option value="Przyprawy">Przyprawy</option>
-        <option value="Makarony">Makarony</option>
+        <option *ngFor="let nazwa of prod.kategorie">{{nazwa.charAt(0).toLocaleUpperCase() + nazwa.slice(1)}}</option>
       </select>
       <button type="submit">Dodaj</button>
     </div>
