--- a/src/app/filtry/filtry.component.html
+++ b/src/app/filtry/filtry.component.html
@@ -1,21 +1,14 @@
   <!-- Filtry kategorii -->
   <section class="filters">
-    <h2>Filtry kategorii</h2>
+    <h2>Filtry kategorii <span class="btn" (click)="rev()">&olarr;</span></h2>
     <div class="filter">
-      <label class="kategoria-label">
-        <span class="kategory">dasdasdsad</span>
+      <label class="kategoria-label" *ngFor="let item of listaKategorii">
+        <span class="kategory">{{item}}</span>
         <label class="switch">
-          <input type="checkbox" checked>
+          <input type="checkbox" [(ngModel)]="select[item]">
           <span class="slider"></span>
         </label>
       </label>
 
-      <label class="kategoria-label">
-        <span class="kategory">Mięso</span>
-        <label class="switch">
-          <input type="checkbox" checked>
-          <span class="slider"></span>
-        </label>
-      </label>
     </div>
   </section>
