--- a/src/app/propozycje/propozycje.component.html
+++ b/src/app/propozycje/propozycje.component.html
@@ -1,6 +1,11 @@
 <!-- Propozycje obiadu -->
 <section class="suggestions">
     <h2>Propozycje na obiad</h2>
-    <button id="search-btn">Szukaj propozycji</button>
+    <button id="search-btn" (click)="pytajAI()">Szukaj propozycji</button>
     <div id="recipe-list"></div>
+  </section>
+
+  <section class="list">
+    <h2>Propozycje</h2>
+    <ul ></ul>
   </section>
